Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66413

QHeaderView: Sorting loses the hidden section sizes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.9.4
    • Widgets: Itemviews
    • None

    Description

      See also QTBUG-65478

      We applied the changes associated to QTBUG-65478 but we still have a failing unit test (attached)

      The content of hiddenSectionSize is cleared when the sorting changes, and the stored sizes are changed to 0.

       

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              tmartsum Thorbjørn Lund Martsum
              cassan Claire Cassan
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes